# prctl

./: BUILD  ChangeLog  Makefile.in  configure  configure.ac  prctl.1  prctl.c  prctl.spec
